--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -17,6 +17,17 @@
 }
 
 
+
+.ui-productHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ui-productTitle {
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-size: 1rem;
